@@ -1,3 +1,7 @@
+2008-01-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* conf/YarpDevice.cmake: better defaults for skipping devices.
+
 2008-01-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/Property.cpp: for Property::fromConfigFile,
